Plugin Name: CoursePress Pro
Author:      WPMU DEV (Irene, Marcin, Philipp, Marko, Jose, Rheinard)
Build Time:  BUILDTIME

CHANGELOG
=================================================

= 2.1.3 =
-------------------------------------------------
* Fixed: Unit and Pages TinyMCE editor does not work after WordPress update to 4.9.

= 2.1.2 =
-------------------------------------------------
* Improved: Add ability to define certificate logo.
* Improved: Show instructor feedback on student workbook frontend.
* CoursePress Theme: Fixed display of HTML Bullet points.
* CoursePress Theme: Fixed expanded unit list view mode.
* CoursePress Theme: Improved bbPress compatibility.
* Fixed: Expanded unit list view mode not working for students.
* Fixed: Export problem on PHP 5.2, json_encode() have only one parameter.
* Fixed: Missing upgrade scripts.
* Fixed: Module access with URL.
* Fixed: Prevent access modules when previously required modules haven't been completed.
* Fixed: Problem loading translations.
* Fixed: Problem with TinyMCE.
* Fixed: Try Again button is not showing while Retry is set to 1.
* Fixed: Visual editor load problem when a user disables in the profile.

= 2.1.1 =
-------------------------------------------------
* Improved: Added `editor-rtl.css` file.
* Improved: Better display responsive video.
* Improved: HTML login & signup forms.
* Improved: Username sanitization.
* Fixed: Assessments feedback sending problem.
* Fixed: Compatibility with older PHP versions.
* Fixed: CoursePress shortcode links are not working.
* Fixed: Even the Discussion module is not "Required", you can't go to next section.
* Fixed: Instructors capabilities problem on multisite installation.
* Fixed: Instructor can't reply to comments on course unit.
* Fixed: Missing translation in steps 6 & 7.
* Fixed: Problems with missing passcode after login.
* Fixed: Problems with PHP 5.2.x.